--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <title>Rest Countries Weather Data</title>
     </head>
     <body>
+        <div class="navbar bg-light ">
+            <p class="container">Rest Countries Weather Data...</p>
+        </div>
         <div class="container flex mt-5" id="container">
             <div class="row" id="row"></div>
         </div>
